# ragflow-simple-ui

./: .gitignore  AGENT.md  AGENTS.md  README.md  check_schema.ts  glossary_task_import_sample.xlsx  package-lock.json  package.json  t_calls.txt
.github/: copilot-instructions.md
.omc/: project-memory.json
.omx/: metrics.json
be/: .dockerignore  .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
client/: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt
client/docs/: changes.md  converter-logic.md  microsoft-print-to-pdf-setup.md
client/src/: app.py  cli.py  config.py  tui.py
client/src/core/: __init__.py  base.py  converter.py  excel_converter.py  pdf_processor.py  powerpoint_converter.py  word_converter.py
client/src/scripts/: debug_bruteforce_printer.py  debug_check_a3.py  debug_pagesize.py  debug_ports.py  debug_printer_set.py  debug_printers.py  debug_registry_printer.py  xlsm_to_xlsx.py
client/src/utils/: logger.py  process_manager.py  timeout.py
client/tests/: debug_method_signature.py  debug_ppt_params.py  manual_cleanup_verify.py  manual_excel_fallback_test.py  repro_rich.py  test_cli.py  test_cli_config_arg.py  test_config.py  test_excel_config_folder.py  test_excel_converter.py  test_multilingual_converter.py  test_pdf_processor.py  test_powerpoint_converter.py  test_ppt_fix.py  test_word_converter.py  verify_config_fix.py  verify_excel_shapes_script.py
docker/: docker-compose.yml
docs/: agent-code-integration.md  api-reference.md  architecture.md  deployment.md  (+9 more)
(+674 files in other folders)
